// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Inkling GraphQL server Should create 5 User 1 Journal 1 Inklings 1`] = `
{
  "data": {
    "commitInklings": [
      {
        "journalId": "1",
        "text": "User1 Inkling1 Journal1",
        "timeId": 1681504601784,
      },
      {
        "journalId": "1",
        "text": "User1 Inkling2 Journal1",
        "timeId": 1681504601785,
      },
      {
        "journalId": "1",
        "text": "User1 Inkling3 Journal1",
        "timeId": 1681504601786,
      },
      {
        "journalId": "1",
        "text": "User1 Inkling4 Journal1",
        "timeId": 1681504601787,
      },
      {
        "journalId": "1",
        "text": "User1 Inkling5 Journal1",
        "timeId": 1681504601788,
      },
    ],
  },
}
`;

exports[`Inkling GraphQL server Should create 5 User 1 Journal 2 Inklings 1`] = `
{
  "data": {
    "commitInklings": [
      {
        "journalId": "2",
        "text": "User1 Inkling6 Journal2",
        "timeId": 1681504601876,
      },
      {
        "journalId": "2",
        "text": "User1 Inkling7 Journal2",
        "timeId": 1681504601877,
      },
      {
        "journalId": "2",
        "text": "User1 Inkling3 Journal2",
        "timeId": 1681504601878,
      },
      {
        "journalId": "2",
        "text": "User1 Inkling9 Journal2",
        "timeId": 1681504601879,
      },
      {
        "journalId": "2",
        "text": "User1 Inkling10 Journal2",
        "timeId": 1681504601880,
      },
    ],
  },
}
`;

exports[`Inkling GraphQL server Should create 5 more User 1 Journal 1 Inklings 1`] = `
{
  "data": {
    "commitInklings": [
      {
        "journalId": "1",
        "text": "User1 Inkling6 Journal1",
        "timeId": 1681504601819,
      },
      {
        "journalId": "1",
        "text": "User1 Inkling7 Journal1",
        "timeId": 1681504601820,
      },
      {
        "journalId": "1",
        "text": "User1 Inkling8 Journal1",
        "timeId": 1681504601821,
      },
      {
        "journalId": "1",
        "text": "User1 Inkling9 Journal1",
        "timeId": 1681504601822,
      },
      {
        "journalId": "1",
        "text": "User1 Inkling10 Journal1",
        "timeId": 1681504601823,
      },
    ],
  },
}
`;

exports[`Inkling GraphQL server Should create User 1 Journal 1 1`] = `
{
  "data": {
    "createJournal": {
      "id": "1",
      "name": "1",
      "userId": "1",
    },
  },
}
`;

exports[`Inkling GraphQL server Should create User 1 Journal 2 1`] = `
{
  "data": {
    "createJournal": {
      "id": "2",
      "name": "2",
      "userId": "1",
    },
  },
}
`;

exports[`Inkling GraphQL server Should create User 2 Journal 3 1`] = `
{
  "data": {
    "createJournal": {
      "id": "3",
      "name": "3",
      "userId": "2",
    },
  },
}
`;

exports[`Inkling GraphQL server Should create User 2 Journal 3 Inklings 1`] = `
{
  "data": {
    "commitInklings": [
      {
        "journalId": "3",
        "text": "User2 Inkling1 Journal3",
        "timeId": 1681504602071,
      },
      {
        "journalId": "3",
        "text": "User2 Inkling2 Journal3",
        "timeId": 1681504602072,
      },
      {
        "journalId": "3",
        "text": "User2 Inkling3 Journal3",
        "timeId": 1681504602073,
      },
      {
        "journalId": "3",
        "text": "User2 Inkling4 Journal3",
        "timeId": 1681504602074,
      },
      {
        "journalId": "3",
        "text": "User2 Inkling5 Journal3",
        "timeId": 1681504602075,
      },
    ],
  },
}
`;

exports[`Inkling GraphQL server Should fail to get any User 1 Journal 1 Inklings before they are made 1`] = `
{
  "data": {
    "inklings": [],
  },
}
`;

exports[`Inkling GraphQL server Should fail to get any User1 Journal1 Inklings as User2 1`] = `
{
  "data": {
    "inklings": [],
  },
}
`;

exports[`Inkling GraphQL server Should fail to get any User1 Journal2 Inklings as User2 1`] = `
{
  "data": {
    "inklings": [],
  },
}
`;

exports[`Inkling GraphQL server Should fail to get any User2 Journal3 Inklings before they are made 1`] = `
{
  "data": {
    "inklings": [],
  },
}
`;

exports[`Inkling GraphQL server Should get 5 User 1 Journal 1 Inklings 1`] = `
{
  "data": {
    "inklings": [
      {
        "journalId": "1",
        "text": "User1 Inkling1 Journal1",
        "timeId": 1681504601784,
      },
      {
        "journalId": "1",
        "text": "User1 Inkling2 Journal1",
        "timeId": 1681504601785,
      },
      {
        "journalId": "1",
        "text": "User1 Inkling3 Journal1",
        "timeId": 1681504601786,
      },
      {
        "journalId": "1",
        "text": "User1 Inkling4 Journal1",
        "timeId": 1681504601787,
      },
      {
        "journalId": "1",
        "text": "User1 Inkling5 Journal1",
        "timeId": 1681504601788,
      },
    ],
  },
}
`;

exports[`Inkling GraphQL server Should get 5 User 1 Journal 2 Inklings 1`] = `
{
  "data": {
    "inklings": [
      {
        "journalId": "2",
        "text": "User1 Inkling6 Journal2",
        "timeId": 1681504601876,
      },
      {
        "journalId": "2",
        "text": "User1 Inkling7 Journal2",
        "timeId": 1681504601877,
      },
      {
        "journalId": "2",
        "text": "User1 Inkling3 Journal2",
        "timeId": 1681504601878,
      },
      {
        "journalId": "2",
        "text": "User1 Inkling9 Journal2",
        "timeId": 1681504601879,
      },
      {
        "journalId": "2",
        "text": "User1 Inkling10 Journal2",
        "timeId": 1681504601880,
      },
    ],
  },
}
`;

exports[`Inkling GraphQL server Should get 5 User 2 Journal 3 Inklings 1`] = `
{
  "data": {
    "inklings": [
      {
        "journalId": "3",
        "text": "User2 Inkling1 Journal3",
        "timeId": 1681504602071,
      },
      {
        "journalId": "3",
        "text": "User2 Inkling2 Journal3",
        "timeId": 1681504602072,
      },
      {
        "journalId": "3",
        "text": "User2 Inkling3 Journal3",
        "timeId": 1681504602073,
      },
      {
        "journalId": "3",
        "text": "User2 Inkling4 Journal3",
        "timeId": 1681504602074,
      },
      {
        "journalId": "3",
        "text": "User2 Inkling5 Journal3",
        "timeId": 1681504602075,
      },
    ],
  },
}
`;

exports[`Inkling GraphQL server Should get 10 User 1 Journal 1 Inklings 1`] = `
{
  "data": {
    "inklings": [
      {
        "journalId": "1",
        "text": "User1 Inkling1 Journal1",
        "timeId": 1681504601784,
      },
      {
        "journalId": "1",
        "text": "User1 Inkling2 Journal1",
        "timeId": 1681504601785,
      },
      {
        "journalId": "1",
        "text": "User1 Inkling3 Journal1",
        "timeId": 1681504601786,
      },
      {
        "journalId": "1",
        "text": "User1 Inkling4 Journal1",
        "timeId": 1681504601787,
      },
      {
        "journalId": "1",
        "text": "User1 Inkling5 Journal1",
        "timeId": 1681504601788,
      },
      {
        "journalId": "1",
        "text": "User1 Inkling6 Journal1",
        "timeId": 1681504601819,
      },
      {
        "journalId": "1",
        "text": "User1 Inkling7 Journal1",
        "timeId": 1681504601820,
      },
      {
        "journalId": "1",
        "text": "User1 Inkling8 Journal1",
        "timeId": 1681504601821,
      },
      {
        "journalId": "1",
        "text": "User1 Inkling9 Journal1",
        "timeId": 1681504601822,
      },
      {
        "journalId": "1",
        "text": "User1 Inkling10 Journal1",
        "timeId": 1681504601823,
      },
    ],
  },
}
`;

exports[`Inkling GraphQL server Should get no User 1 Journal 2 Inklings (since none have been made yet) 1`] = `
{
  "data": {
    "inklings": [],
  },
}
`;

exports[`Inkling GraphQL server Should still fail to get any User1 Journal1 Inklings as User2 1`] = `
{
  "data": {
    "inklings": [],
  },
}
`;

exports[`Inkling GraphQL server Should still fail to get any User1 Journal2 Inklings as User2 1`] = `
{
  "data": {
    "inklings": [],
  },
}
`;
